Fixed! Updated to Academic 3.2

--- a/content/post/2016-08-11-R-vs.-ArcGIS.md
+++ b/content/post/2016-08-11-R-vs.-ArcGIS.md
@@ -3,7 +3,8 @@ title:  R vs. ArcGIS
 date: 2016-08-11 08:25:10
 summary: "A student asked: I never use ArcGIS before. What's the limitation of R which ArcGis can do but R can't? And what else R can do in this area except loading area map?"
 slug: R-vs.-ArcGIS
-tags: [R, spatial data]
+tags_include: [R, spatial data]
+categories: []
 ---
 
 This question arose from [these exercises](http://atyre2.github.io/2016-01-11-lincoln/week16.html). 
