--- a/content/post/2016-12-08-ice_age_1970s.md
+++ b/content/post/2016-12-08-ice_age_1970s.md
@@ -5,7 +5,8 @@ slug: ice_age_1970s
 summary: "A good friend posted [this link](http://www.christianpost.com/news/global-cooling-why-we-need-politics-out-of-climate-change-science-167173/) 
 to FB. I read the post, did some background reading, and debated whether to write this post or not. I've been writing it in my head anyway, so time to get it out!"
 comments: true
-tags: [climate, philosophy] 
+tags_include: [climate, philosophy] 
+categories: []
 ---
 
 A good friend posted [this link](http://www.christianpost.com/news/global-cooling-why-we-need-politics-out-of-climate-change-science-167173/) 
