--- a/content/post/adventures-in-metadata.Rmd
+++ b/content/post/adventures-in-metadata.Rmd
@@ -5,7 +5,8 @@ date: '2017-12-07'
 slug: adventures-in-metadata
 draft: true
 summary: "Metadata are good. Everyone should create metadata. But writing raw XML is bad. rOpenSci created the EML package to make this easier."
-tags:
+categories: []
+tags_include:
   - R
   - data manipulation
   - ecology
