current state start

--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -62,6 +62,25 @@ that leaves a student unable to complete the work.
 
 Current state
 
+Last summer a colleague was diagnosed with Cancer. Joe Dauer and I took over 
+the Intro ecology course to allow him to focus on healing and recovery. I was doing well
+and it seemed like a doable thing, co-teaching ecology and organizing the lab at
+the same time. I was super excited to teach
+with Joe, one of the DBER faculty at UNL. I expected to learn a lot. I wasn't 
+disappointed! It was an awesome experience. Unfortunately it was also a little too
+much. I made it through the semester, but once grades were in, the pressure came 
+off, and my mood slipped day by day. 
+
+I'd also agreed to organize the lab for the spring semester on top of my regular
+teaching. It was a good idea, really. We need to bring the fall and spring versions
+back into greater alignment, and having me take over the spring semester as well
+would facilitate that. I was self-aware enough to recognize that a 2nd semester 
+of double teaching would do me in, so I had started working with my boss to delegate
+and transfer some other responsibilities. 
+
+I'd been developing some involuntary twitching over the last few weeks of the 
+semester.
+
 I have to remind myself that wellness is a process. I'm struggling now, but 
 there is hope. I've surrounded myself with living things[^things], and my 
 family is always close at hand. 
