more current state

--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -68,22 +68,29 @@ and it seemed like a doable thing, co-teaching ecology and organizing the lab at
 the same time. I was super excited to teach
 with Joe, one of the DBER faculty at UNL. I expected to learn a lot. I wasn't 
 disappointed! It was an awesome experience. Unfortunately it was also a little too
-much. I made it through the semester, but once grades were in, the pressure came 
-off, and my mood slipped day by day. 
+much.  
 
 I'd also agreed to organize the lab for the spring semester on top of my regular
 teaching. It was a good idea, really. We need to bring the fall and spring versions
-back into greater alignment, and having me take over the spring semester as well
+into greater alignment, and having me take over the spring semester as well
 would facilitate that. I was self-aware enough to recognize that a 2nd semester 
 of double teaching would do me in, so I had started working with my boss to delegate
-and transfer some other responsibilities. 
+and transfer some other responsibilities. I made it through the semester, but 
+once grades were in, the pressure came off, and my mood slipped day by day. 
 
-I'd been developing some involuntary twitching over the last few weeks of the 
-semester.
+Some involuntary twitching[^twitch] developed over the last few weeks of the semester.
+In hindsight that was an early warning sign that I'd stretched myself beyond
+capacity. As it was, the random crying jags struck about 4 days after I turned in
+my grades. On a whim, I stopped in to see my boss and update him on my plans for the 
+spring semester. What I didn't plan on was bursting into tears in his office. 
 
 I have to remind myself that wellness is a process. I'm struggling now, but 
 there is hope. I've surrounded myself with living things[^things], and my 
 family is always close at hand. 
+
+[^twitch]: These are sharp, sudden spasms of a majority of muscles in my upper body.
+They are particularly likely when I bump into something or someone touches me, but
+happen all the time. 
 
 [^things]: Mushrooms, yeast, and lactic acid bacteria are alive! Our windows 
 block too much light to grow plants indoors. I plan to start some outdoor herb 
