current state III

--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -62,7 +62,7 @@ that leaves a student unable to complete the work.
 
 Current state
 
-Last summer a colleague was diagnosed with Cancer. Joe Dauer and I took over 
+Last summer a colleague was diagnosed with cancer. Joe Dauer and I took over 
 the Intro ecology course to allow him to focus on healing and recovery. I was doing well
 and it seemed like a doable thing, co-teaching ecology and organizing the lab at
 the same time. I was super excited to teach
@@ -74,15 +74,27 @@ I'd also agreed to organize the lab for the spring semester on top of my regular
 teaching. It was a good idea, really. We need to bring the fall and spring versions
 into greater alignment, and having me take over the spring semester as well
 would facilitate that. I was self-aware enough to recognize that a 2nd semester 
-of double teaching would do me in, so I had started working with my boss to delegate
+of double teaching would do me in, so I had started working with John, my boss, to delegate
 and transfer some other responsibilities. I made it through the semester, but 
 once grades were in, the pressure came off, and my mood slipped day by day. 
 
 Some involuntary twitching[^twitch] developed over the last few weeks of the semester.
 In hindsight that was an early warning sign that I'd stretched myself beyond
 capacity. As it was, the random crying jags struck about 4 days after I turned in
-my grades. On a whim, I stopped in to see my boss and update him on my plans for the 
-spring semester. What I didn't plan on was bursting into tears in his office. 
+my grades. On a whim, I stopped in to see John and update him on my plans for the 
+spring semester. What I didn't plan on was bursting into tears in his office.
+I left more or less completely deflated, but with strict orders that I would
+not be teaching ecology lab or doing several other things this spring. 
+
+I arranged an emergency visit with my counselor. It was only 5 minutes into the 
+conversation when he asked if I would check myself in to the psychiatric ward at
+our local hospital. That really drove home how bad I was. More discussion
+of that option revealed I wasn't actively suicidal, so not needed, but ouch. 
+That was a wakeup call for sure. 
+
+Next stop, back to my GP to see about medication. I sat there, twitching, rubbing my hands
+together anxiously, barely holding back tears while describing the situation to
+the nurse. 
 
 I have to remind myself that wellness is a process. I'm struggling now, but 
 there is hope. I've surrounded myself with living things[^things], and my 
