--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -1,14 +1,16 @@
 ---
-title: Mental Health Redux
-author: Drew Tyre
+title: "Mental Health Redux"
+author: "Drew Tyre"
 date: '2019-02-21'
-draft: true
+output: word_document
+draft: yes
 slug: mental-health-redux
-summary: 'About a year ago I disclosed my depression to the interwebs. It seems timely to revisit the topic.'
-categories: ["Personal"]
+summary: About a year ago I disclosed my depression to the interwebs. It seems timely
+  to revisit the topic.
 tags_include:
-  - Higher Ed
-  - mental health
+- Higher Ed
+- mental health
+categories: Personal
 ---
 
 About a year ago [I disclosed my depression to the interwebs](https://drewtyre.rbind.io/mental-health/). 
